Add allowed origin to app properties